overlays/minikube/mongodb-statefulset.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  volumeClaimTemplates:
  - metadata:
      name: mongo-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
