overlays/minikube/minikube-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: track-digital-web
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: track-digital.minikube
    http:
      paths:
      - backend:
          serviceName: track-digital-service
          servicePort: http
